<resources>
    <string name="app_name">GéoResto</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">register</string>
    <string name="mail">Adresse email</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="passwordForgotten">Mot de passe oublié ?</string>
    <string name="menu">menu</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="title_activity_mapsOnline">MapsOnline</string>
    <string name="history">Historique</string>
    <string name="favourites">Favoris</string>
    <string name="comments">Mes avis</string>
    <string name="newLocation">Ajouter un lieu</string>
    <string name="logOut">Se déconnecter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="LogoDescription">GéoResto Logo</string>
    <string name="app_logo">Logo de l\'application</string>
    <string name="search">Rechercher</string>
    <string name="restaurant">Restaurant</string>
    <string name="commerce">Commerce</string>
    <string name="profileImageDescription">Image de profil</string>
    <string name="password_confirmation">Confirmez le mot de passe</string>
    <string name="pseudonyme">pseudonyme</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="homeButton">homeButton</string>
    <string name="nameLocation">Nom du lieu</string>
    <string name="adress">Adresse</string>
    <string name="website">Site web</string>
    <string name="phoneNumber">Téléphone</string>
    <string name="filtersAdded">Filtres Ajoutés</string>
    <string name="currentPrice">Prix maximum: 20€</string>
    <string name="currentDistance">Distance maximum: 5km</string>
    <string name="newPicture">Ajouter une photo</string>
    <string name="schedule">Horaires</string>
    <string name="mondayText">Lundi</string>
    <string name="tuesdayText">Mardi</string>
    <string name="wednesdayText">Mercredi</string>
    <string name="thursdayText">Jeudi</string>
    <string name="fridayText">Vendredi</string>
    <string name="saturdayText">Samedi</string>
    <string name="sundayText">Dimanche</string>
    <string name="cancel">Retour</string>
    <string name="next">suivant</string>
    <string name="validate">Valider</string>
    <string name="UpdatePosition">Update Position</string>
    <string name="filter">Filtrer</string>
    <string name="note_minimale">Note Minimale :</string>
    <string name="openingSchedule">Horaire d\'ouverture</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="nom_du_lieu">Nom du lieu</string>
    <string name="priceSeekBarText">Prix maximum: %d €</string>
    <string name="distanceSeekBarText">Distance maximum: %d km</string>
    <string name="star_button">Star Button</string>
    <string name="add_to_contact">Ajouter à mes contacts</string>
    <string name="add_to_reminders">Ajouter un rappel</string>
    <string name="suggestions">Nos suggestions</string>
</resources>
