<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/research_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="8dp"
        android:searchIcon="@drawable/ic_search_black_24dp" />

    <Button
        android:id="@+id/suggestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/research_toggle_restaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/restaurant"
            android:textOn="@string/restaurant" />

        <ToggleButton
            android:id="@+id/research_toggle_commerce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textOff="@string/commerce"
            android:textOn="@string/commerce" />

    </LinearLayout>

    <Spinner
        android:id="@+id/research_tag_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/research_tag_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/filtersAdded"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/research_price_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/currentPrice" />

    <SeekBar
        android:id="@+id/research_price_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/research_distance_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/currentDistance" />

    <SeekBar
        android:id="@+id/research_distance_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_minimale"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"/>

    <RatingBar
        android:id="@+id/research_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:max="5"
        android:numStars="5"
        android:stepSize="1" />

    <Button
        android:id="@+id/research_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/filter" />

</LinearLayout>