<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/connect" />

        <ImageButton
            android:id="@+id/accessProfile"
            android:layout_width="61dp"
            android:layout_height="63dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/username"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.CoordinatorLayout>